--- a/Front-end_Tiennh21/Lab/Lab05/bai4.html
+++ b/Front-end_Tiennh21/Lab/Lab05/bai4.html
@@ -107,7 +107,14 @@
     <script>
         const app = angular.module("myapp", []);
         function myCtrl($scope) {
-            $scope.students = [];
+            $scope.students = [{
+
+                fullname: 'Đức',
+                birthday: '2002-09-09',
+                mark: 6
+            }
+            
+            ];
             $scope.student = {};
             $scope.index = -1;
 
