--- a/Front-end_Tiennh21/Assignment/layout.html
+++ b/Front-end_Tiennh21/Assignment/layout.html
@@ -13,6 +13,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.8.1/angular-cookies.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/Register.css">
     <link rel="stylesheet" href="css/About.css">
@@ -26,6 +28,7 @@
     <div class="container-fluid">
         <div ng-include="'layout/Navbar.html'"></div>
         <div ng-view></div>
+        
 
         <!-- <div ng-include="'layout/ListQuestion.html'"></div>
         <div ng-include = "'layout/HomePage.html'"></div>
@@ -50,11 +53,14 @@
     <script src="app/loginCtr.js"></script>
     <script src="app/RegisCtrl.js"></script>
     <script src="app/forgotPassword.js"></script>
-    <script src="app/updateProfile.js"></script> 
+    <script src="app/updateProfile.js"></script>
     <script src="app/changPassCtrl.js"></script>
     <script src="app/indexCtrl.js"></script>
     <script src="app/informationExamCtrl.js"></script>
     <script src="app/testQuestionsCtr.js"></script>
+    <script src="app/AddAccountAdmin.js"></script>
+    <script src="app/HistoryCtr.js"></script>
+
 </body>
 
 </html>
