--- a/Front-end_Tiennh21/Assignment/layout.html
+++ b/Front-end_Tiennh21/Assignment/layout.html
@@ -21,7 +21,7 @@
     <!-- <link rel="stylesheet" href="css/mdb.css">
     <link rel="stylesheet" href="css/mdb.min.css"> -->
     <script src="app/Controller.js"></script>
-    <script src="db/Subjects.js"></script>
+    <!-- <script src="db/Subjects.js"></script> -->
 </head>
 
 <body ng-app="myApp">
