--- a/Front-end_Tiennh21/Assignment/layout.html
+++ b/Front-end_Tiennh21/Assignment/layout.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.8.1/angular-cookies.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/Register.css">
     <link rel="stylesheet" href="css/About.css">
@@ -60,6 +59,7 @@
     <script src="app/testQuestionsCtr.js"></script>
     <script src="app/AddAccountAdmin.js"></script>
     <script src="app/HistoryCtr.js"></script>
+    <script src="app/AddQuizz.js"></script>
 
 </body>
 
