--- a/Front-end_Tiennh21/Assignment/layout.html
+++ b/Front-end_Tiennh21/Assignment/layout.html
@@ -60,6 +60,8 @@
     <script src="app/testQuestionsCtr.js"></script>
     <script src="app/AddAccountAdmin.js"></script>
     <script src="app/HistoryCtr.js"></script>
+    <script src="app/AddQuizz.js"></script>
+    <script src="app/CreateQuetions.js"></script>
 
 </body>
 
