--- a/Front-end_Tiennh21/Assignment/layout.html
+++ b/Front-end_Tiennh21/Assignment/layout.html
@@ -62,6 +62,7 @@
     <script src="app/HistoryCtr.js"></script>
     <script src="app/AddQuizz.js"></script>
     <script src="app/CreateQuetions.js"></script>
+    <script src="app/FeedBack.js"></script>
 
 </body>
 
